--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-<h1>My First GitHub Page</h1>
+<!DOCTYPE html> 
+
+
+<html> 
+  
+<head> 
+        <meta name="viewport" content="width=device-width"> 
+        <title>My First GitHub Page</title>
+        <style>
+             table.my-table {
+         border-collapse: collapse;
+       }
+
+
+
+
+       table.my-table th {
+         background-color: #54585d;
+         color: #ffffff;
+         font-weight: bold;
+         font-size: 13px;
+         border: 1px solid #54585d;
+       }
+
+
+
+
+       table.my-table td {
+         padding: 15px;
+       }
+     table.my-table td {
+       color: #636363;
+       border: 1px solid #383c3f;
+     }
+     table.my-table tr {
+       background-color: #63aaf5;
+     }
+     table.my-table tr:nth-child(odd) {
+       background-color: #ffffff;
+     }
+
+
+        </style>
+  </head> 
+  <body>
+    <h1>My First GitHub Page</h1>
+    <p>Insert something smart here</p>
+    <p>Insert something smarter here</p>
+    <p>Insert something smart here</p>
+    <div>
+      <ul>
+        <li>Whales</li>
+        <li>More Whales</li>
+        <li>Every Whale Ever</li>
+      </ul>
+      <ol>
+        <li>MeowTown</li>
+        <li>FroggieLand</li>
+        <li>CatsBazaar</li>
+      </ol>
+    </div>
+    <div>extra words here<img src="https://picsum.photos/200/300">double extra words</div>
+    <div>Pictures provided by <a href="https://picsum.photos/" target="_blank">Lorem Picsum</a></div>
+    <p>Here is how you use the <strong>strong</strong> tag.</p>
+  </body> 
+  <p>Here is how you use the <em>em</em> tag.</p>
+  </body> 
+  <p>Here is how you use the <strike>strike</strike> tag.</p>
+  <div>Help! I'm in the div!<span style="background-color:yellow">Oh no! I'm stuck in the span now!</span></div>
+  <table class="my-table">
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Email</th>
+    </tr>
+    <tr>
+      <td>Tahlulah</td>
+      <td>Bell</td>
+      <td>catsmeow16@example.com</td>
+    </tr>
+      <tr>
+      <td>Ellie</td>
+      <td>ChatGPT</td>
+      <td>elliegurl@example.com</td>
+    </tr>
+      <tr>
+      <td>Hobbes</td>
+      <td>Hicks</td>
+      <td>grumpyseal@example.com</td>
+    </tr>
+  </table>
+  </body> 
+
+
+</html> 
+
